started on the great translation conversion to paper components and messages